<resources>
    <string name="app_name">Food choice</string>
    <string name="slogan">Cooking a Delicious Food Easily</string>
    <string name="slogan_dis">Discover more than 1200 food recipe in your hand and cooking it easily</string>
    <string name="copyright">Copyrights © 2022 FoodChoice</string>

    <!--String for On boarding Screens-->

    <string name="first_slide_title">Find Recipes</string>
    <string name="second_slide_title">Enjoy!</string>
    <string name="third_slide_title">Cook</string>

    <!--Descriptions-->
    <string name="first_slide_des">Cast iron is an old fashion form of cookware that still has a place in today\'s world of modern cooking.</string>
    <string name="second_slide_des">There are many variations of frosting recipes as there desi recipe.One of the most popular is Chicken Biryani.</string>
    <string name="third_slide_des">You may  think that all ice is the same , but if you have contaminated ice , you and your family could be risking your health.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="start_btn">Get Started</string>

    <!--Sign in strings-->
    <string name="sign_in">Sign in</string>
    <string name="phrase">Already\nhave an\nAccount?</string>
    <string name="cr_acc">Create a account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="ed_email">Enter your email</string>
    <string name="ed_password">Enter your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="fr_pass">Forgot password?</string>


    <!--Sign up strings-->
    <string name="sign_up">Sign Up</string>
    <string name="phrase_two">Here\'s\nyour first\nstep with\nus!</string>
    <string name="su_cr">already have an account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="or">OR</string>


    <!--Menu titles-->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="profile">Profile</string>
    <string name="grocery">Grocery</string>
    <string name="Login">Sign In</string>
    <string name="recipe">Recipe</string>
    <string name="my_rec">My Recipe\'s</string>
    <string name="back_to_home">Back to home</string>
    <string name="my_info">My information</string>


    <!--Dashboard Strings-->
    <string name="top_bar_title">Aj kia pakkana hai?</string>
    <string name="search_hint">Search Recipe</string>
    <string name="search_cat">Search Category</string>
    <string name="search_grocery">Search Grocery</string>

    <!--MealPlanner Strings-->
    <string name="break_fast">Break Fast</string>
    <string name="lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="break_todo">Breakfast is often called \'the most important meal of the day\', and for good reason. As the name suggests, breakfast breaks the overnight fasting period</string>
    <string name="lunch_todo">\ˈlunch. : a light meal. especially : one eaten in the middle of the day. : the food prepared for a lunch.</string>
    <string name="dinner_todo">In modern use dinner and supper both usually refer to the main meal of the day eaten in the evening, with dinner being the slightly more formal word</string>
    <string name="title_activity_update_user_profile">update_user_profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--MealPlanner Strings-->
    <string name="rec_slogan">Make your own recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="edit_txt_rec">Write down recipe name</string>
    <string name="htc">How to cook</string>
    <string name="ad">Add direction</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_btn">Upload cover image</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_btn">Add ingredients</string>
    <string name="Video_edit">Add Video Url</string>
    <string name="Video">Video</string>
    <string name="add_cat">Add category</string>
    <string name="add_des">Add description</string>
    <string name="description">Description</string>
    <string name="upload_recipe">Upload Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>