<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/dashboard"
            />

        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/categories"
            android:icon="@drawable/category"
            />

        <item
            android:id="@+id/nav_recipe"
            android:title="@string/recipe"
            android:icon="@drawable/cooking"
            />

        <item
            android:id="@+id/nav_grocery"
            android:title="@string/grocery"
            android:icon="@drawable/groceries"
            />


        <item
            android:id="@+id/nav_createRecipe"
            android:title="Create Recipe"
            android:icon="@drawable/cooking"
            />

        <item
            android:id="@+id/nav_login"
            android:title="@string/sign_in"
            android:icon="@drawable/login"
            />

        <item
            android:id="@+id/nav_signUp"
            android:title="@string/sign_up"
            android:icon="@drawable/login"
            />

    </group>

    <group
         android:checkableBehavior="single"
        >

        <item android:id="@+id/nav_logout"
         android:title="logout"
            android:icon="@drawable/logout"
            />
    </group>

</menu>