<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCredentials.WelcomeScreen">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_alpha" />

    <ImageButton
        android:id="@+id/btn_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@color/color_white"
            android:textSize="35sp"
            android:fontFamily="@font/custom_font_regular"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_dis"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLayout">

        <Button
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_buttons"
            android:text="@string/sign_in"
            android:fontFamily="@font/custom_font_regular"
            android:textColor="@color/color_secondary"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/secondary_buttons"
            android:text="@string/sign_up"
            android:fontFamily="@font/custom_font_regular"
            app:backgroundTint="@null" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>