<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".AccountCredentials.SignIn">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.FoodChoice">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/color_main"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:layout_collapseMode="parallax"
                    android:text="@string/phrase"
                    android:textColor="@color/color_secondary"
                    android:textSize="25sp"
                    android:fontFamily="@font/custom_font_regular"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/signin"
                    android:background="@drawable/sign_in_image_bg"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nested_account_bg"
        android:padding="30dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/ed_email"
                app:boxStrokeColor="@color/color_secondary"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/color_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_secondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ed_password"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:boxStrokeColor="@color/color_secondary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTintMode="multiply"
                app:hintTextColor="@color/color_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColor="@color/color_secondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/color_secondary"
                    android:text="@string/remember_me"
                    android:textColor="@color/color_secondary"
                    android:textSize="11sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:text="@string/fr_pass"
                    android:textAllCaps="false"
                    android:textColor="@color/color_secondary"
                    android:textSize="11sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_buttons"
                android:text="@string/sign_in"
                android:fontFamily="@font/custom_font_regular"
                android:textColor="@color/color_secondary"
                />

            <Button
                android:id="@+id/RegisterHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_secondary"
                android:text="@string/cr_acc"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_secondary"
                android:textSize="18sp"
                android:text="@string/or"
                android:textStyle="bold"
                android:fontFamily="@font/custom_font_regular"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:elevation="20dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/social_custom_buttons"
                    android:drawableLeft="@drawable/google"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                    android:text="@string/google"
                    android:fontFamily="@font/custom_font_regular"
                    android:textColor="@color/color_secondary"
                    app:backgroundTint="@null" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/social_custom_buttons"
                    android:drawableLeft="@drawable/facebook"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                    android:text="@string/facebook"
                    android:fontFamily="@font/custom_font_regular"
                    android:textColor="@color/color_secondary"
                    app:backgroundTint="@null" />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>